# ecids-test-dbt

./: .gitignore  Makefile  cleanup_dagster.sh  dbt_project.yml  docker-compose.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt_production.yml
ecids_test/: dbt_project.yml
ecids_test/models/staging/: schema.yml
hhs_platform/: __init__.py  assets.py  config.py  definitions.py  jobs.py  resources.py  schedules.py  sensors.py
macros/: get_custom_schema.sql
models/staging/: schema.yml
