[project]
name = "ecids-test"
version = "0.1.0"
description = "ECIDS Test"
authors = [
    {name = "CSW191",email = "joshua.parep@mt.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-snowflake (>=1.10.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
